Updated all jquery ajax calls to XMLHttpRequests

--- a/nav.html
+++ b/nav.html
@@ -5,7 +5,9 @@
 	<div class='nav'>
 		<div class='left'>
 			<p id='home' href='index.php'>Camagru</p>
+			<p id='gallery'>| Gallery</p>
 		</div>
+		<script src='nav.js'></script>
 		<div class='search'>
 			<form  action='#'>
 				<input type='text' name='search' value=''/>
