Gallery up, working on responsive

--- a/nav.html
+++ b/nav.html
@@ -17,7 +17,7 @@
 		<div class='right'>
 		<?php
 		session_start();
-		if ($_SESSION['loggedIn'] !== '')
+		if ($_SESSION['loggedIn'])
 		{
 		?>
 			<form action='' method='post'>
