--- a/nav.html
+++ b/nav.html
@@ -1,28 +1,30 @@
 <head>
 	<link rel='stylesheet' type='text/css' href='nav.css'/>
+
 </head>
-<div class="navbar navbar-default">
-	<div class="container-fluid">
+<!-- <nav >
+	<div >
 		<div class="navbar-header">
-			<div class='home' id='home' onclick='redirectHome()' >Camagru</div>
-			<div class='gallery' id='gallery' onclick="redirectGallery()">| Gallery</div>
+			
 			<script src='nav.js'></script>
 			<?php
 			session_start();
 			if ($_SESSION['loggedIn'])
 			{
 			?>
-				<form action='' method='post'>
-					<input type='submit' name='submit' value='Log Out'>
+				<form class='navbar-form navbar-right' action='' method='post'>
+					<input type='submit' class='btn btn-default' name='submit' value='Log Out'>
 				</form>
 			<?php
 			}
 			?>
+			<div id='home' onclick='redirectHome()' >Camagru</div>
+			<div  id='gallery' onclick="redirectGallery()"> Gallery</div>
 		</div>
 	</div>
-</div>
+</nav> -->
 
-<!-- <div class='container'>
+<div class='container'>
 	<div class='nav'>
 		<div class='left'>
 			<div class='home' id='home' onclick='redirectHome()' >Camagru</div>
@@ -35,12 +37,12 @@
 		if ($_SESSION['loggedIn'])
 		{
 		?>
-			<form action='' method='post'>
-				<input type='submit' name='submit' value='Log Out'>
+			<form class='navbar-form navbar-right' action='' method='post'>
+				<input type='submit' class='btn btn-default' name='submit' value='Log Out'>
 			</form>
 		<?php
 		}
 		?>
 		</div>
 	</div>
-</div> -->
+</div>
